# fitnessCenterAPI

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  gym_schedule.db  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 20260525_0001_seed_data.py  20260604_0002_trainer_user_link.py
app/: main.py  models.py
app/core/: authorization.py  client_origin.py  config.py  db.py  dependencies.py  exceptions.py  firebase_auth.py  media.py  migrations.py  push.py  security.py  seed.py  tenancy.py
app/domain/: __init__.py  enums.py  policies.py  value_objects.py
app/repositories/: __init__.py  rps_admin.py  rps_blog.py  rps_booking.py  rps_class.py  rps_company.py  rps_discipline.py  rps_location.py  rps_membership.py  rps_notification.py  rps_role.py  rps_slot.py  rps_trainer.py  rps_user.py
app/routers/: __init__.py  rtr_admin.py  rtr_auth.py  rtr_blog.py  rtr_bookings.py  rtr_classes.py  rtr_disciplines.py  rtr_home.py  rtr_memberships.py  rtr_notifications.py  rtr_profile_images.py  rtr_slots.py  rtr_statics.py  rtr_trainers.py
app/schemas/: __init__.py  scm_admin.py  scm_auth.py  scm_blog.py  scm_booking.py  scm_class_category.py  scm_class_type.py  scm_common.py  scm_discipline.py  scm_home.py  scm_membership.py  scm_notification.py  scm_slot.py  scm_static.py  scm_trainer.py  scm_user.py
app/services/: __init__.py  svc_admin.py  (+14 more)
scripts/: generate_slots.py  init_db.py  run_api.py  set_and_verify_demo_users.py
sql/: seed_data.sql  seed_firebase_user.sql  seed_firebase_user_postgres.sql
(+4 files in other folders)
