[project]
name = "project-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi==0.135.1",
	"pydantic==2.12.4",
	"pydantic-settings==2.11.0",
	"sqlalchemy==2.0.48",
	"alembic==1.18.4",
	"bcrypt==4.0.1",
	"email-validator==2.3.0",
	"firebase-admin==7.1.0",
	"httpx==0.28.1",
	"passlib[bcrypt]==1.7.4",
	"psycopg[binary]==3.2.12",
	"pyjwt==2.10.1",
	"uvicorn==0.38.0"
]

