[project]
name = "project-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi==0.135.1",
	"pydantic==2.12.4",
	"pydantic-settings==2.11.0",
	"sqlalchemy==2.0.48",
	"alembic==1.18.4",
	"email-validator==2.3.0",
	"firebase-admin==7.1.0",
	"httpx==0.28.1",
	"psycopg2-binary==2.9.9",
	"uvicorn==0.38.0"
]

